# single_cell_toolkit

./: README.md  add_corrected_barcode_to_read_name.sh  barcode_10x_scatac_fastqs.sh  calculate_saturation_10x_samples.py  calculate_saturation_from_fragments.py  correct_barcode_from_fastq.seq  correct_barcode_from_fastq.sh  correct_barcode_in_fastq.seq  correct_barcode_in_fastq.sh  create_issaac_seq_barcode_fastq_for_star_solo.sh  create_scifi_rna_barcode_fastq_for_star_solo.sh  debarcode_10x_scatac_fastqs.sh  extract_and_correct_and_split_scalebio_atac_barcode_from_fastq.sh  extract_and_correct_biorad_barcode_from_fastq.seq  extract_and_correct_biorad_barcode_from_fastq.sh  extract_and_correct_biorad_barcode_in_fastq.seq  extract_and_correct_biorad_barcode_in_fastq.sh  extract_and_correct_hydrop_atac_barcode_from_fastq.seq  extract_and_correct_hydrop_rna_barcode_from_fastq.seq  extract_and_correct_hydrop_rna_barcode_from_fastq.sh  extract_and_correct_issaac_seq_barcode_from_fastq.seq  extract_and_correct_scalebio_atac_barcode_from_fastq.seq  extract_and_correct_scalebio_atac_barcode_from_fastq.sh  extract_and_correct_scalebio_atac_barcode_in_fastq.seq  extract_and_correct_scalebio_atac_barcode_in_fastq.sh  extract_and_correct_scifi_rna_barcode_from_fastq.seq  extract_hydrop_atac_barcode_from_R2_fastq.sh  fastq_subset.sh  filter_fastq_by_read_names.sh  filter_star_solo_raw_count_matrix.py  fix_R2_read_10x_scATAC_and_10x_multiome_ATAC_fastq.sh  fix_scalebio_atac_fastqs.sh  fix_sra_fastq.sh  fragments_to_bw.py  fragments_to_cut_sites.sh  limit_aviti_fastq_to_max_q40.sh  mapping_stats.sh  mark_or_remove_duplicates_per_barcode.sh  run_seq_program.sh  split_scalebio_atac_fastqs.sh  (+1 more)
barcard/: calculate_jaccard_index_cbs.py  calculate_jaccard_index_cbs_10x_compare.py  merge_cbs_over_jaccard_index_threshold.py
barcode_extraction_and_correction/: add_corrected_barcode_to_read_name.sh  add_corrected_barcode_to_sam.sh  barcode_10x_scatac_fastqs.sh  correct_barcode_from_fastq.codon  correct_barcode_from_fastq.sh  create_issaac_seq_barcode_fastq_for_star_solo.sh  create_scifi_rna_barcode_fastq_for_star_solo.sh  extract_and_correct_and_split_scalebio_atac_barcode_from_fastq.sh  extract_and_correct_biorad_barcode_from_fastq.sh  extract_and_correct_hydrop_atac_barcode_from_fastq.codon  extract_and_correct_hydrop_atac_barcode_from_fastq.seq  extract_and_correct_hydrop_atac_barcode_from_fastq.sh  extract_and_correct_hydrop_rna_barcode_from_fastq.codon  extract_and_correct_hydrop_rna_barcode_from_fastq.sh  extract_and_correct_issaac_seq_barcode_from_fastq.codon  extract_and_correct_scalebio_atac_barcode_from_fastq.codon  extract_and_correct_scalebio_atac_barcode_from_fastq.sh  extract_and_correct_scifi_rna_barcode_from_fastq.codon  extract_hydrop_atac_barcode_from_R2_fastq.sh
barcode_extraction_and_correction/barcode_extraction_and_correction/: barcode_correction.codon  utils.codon
barcode_extraction_and_correction/seq_lib/: barcode_correction.seq  utils.seq
create_fragments_file/: Cargo.toml
fastq_manipulation/: extract_cb_umi_as_fastq_from_sra_file.sh  fastq_subset.sh  filter_fastq_by_read_names.sh  fix_R2_read_10x_scATAC_and_10x_multiome_ATAC_fastq.sh  fix_sra_fastq.sh  sra_file_to_fastqs.sh
rust/: Cargo.toml
seq_lib/: barcode_correction.codon  barcode_correction.seq  utils.codon  utils.seq
test/barcode_10x_scatac_fastqs/: input_R1.fastq  input_R2.fastq  input_R2.with_corrected_bc.fastq  input_R3.fastq
