[package]
name = "create_fragments_file"
version = "0.1.0"
authors = ["Gert Hulselmans <gert.hulselmans@kuleuven.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "*", default-features = true, features = ["bzip2", "lzma", "curl", "libdeflate"]  }
bio-types = "0.13"
itoa = "1.0"
grep-cli = "0.1.6"
termcolor = "1.1.3"

[profile.dev.package."*"]
opt-level = 3
